--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,6 @@ __pycache__
 
 # voidsh readline history. Note: the directory without files should be remained.
 .voidsh_history/*
+
+#plugins for test (with prefix "-")
 plugins/root/_*
